--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.17.1",
     "next": "15.5.5",
+    "node-snap7": "^1.0.9",
     "prisma": "^6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -18,7 +19,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.22",
+    "@types/node-snap7": "^0.2.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
